# BubbleRender

./: readme.md
docs/: Belcour2017.md  Kim2012-implementation-1.0.md  Kim2012.md  devlog-2026-05-26-refraction-fixes.md  devlog-2026-05-26-windows-setup.md  devlog-2026-05-28-windows-env.md  devlog-2026-05-30-bubble-rendering-progress.md  devlog-2026-05-30-bubble-thin-film-tuning.md  paper-reference-plan.md
refraction/: README.md
refraction/AppScope/: app.json5
refraction/AppScope/resources/base/element/: string.json
refraction/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
refraction/entry/src/main/cpp/render/: camera.cpp  camera.h  mesh.h  model.cpp  model.h  shader.cpp  shader.h
refraction/entry/src/main/cpp/shader/: shader_background.h  shader_quad.h  shader_refraction.h  shader_skybox.h
refraction/entry/src/main/cpp/types/libentry/: Index.d.ts
refraction/entry/src/main/ets/entryability/: EntryAbility.ets
refraction/entry/src/main/ets/pages/: Index.ets
refraction/oh_modules/.ohpm/: lock.json5
windows/: CMakeLists.txt  main.cpp
windows/render/: camera.cpp  camera.h  mesh.h  model.cpp  model.h  shader.cpp  shader.h
windows/shader/: shader_background.h  shader_quad.h  shader_refraction.h  shader_skybox.h
